--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="grupo">
                 <img src="imagens/logo.png" class="logo-insta" alt="logo insta">
                 <div class="profile-foto">
-                    <img src="imagens/foto para perfil.png" alt="foto perfil">
+                    <img src="imagens/perfil.JPG" alt="foto perfil">
                 </div>
                 <a href="*" class="instagram-login">Continue como Antonio?</a>
                 <a href="*" class="instagram-logout">Remover conta</a>
